--- a/dev/web.html
+++ b/dev/web.html
@@ -94,7 +94,7 @@
         <!-- About -->
         <div class="w3-container" id="about">
             <div class="w3-content" style="max-width:700px">
-                <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">EASY IMAGE CLASSIFIER IN MINUTES</span></h5>
+                <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
                 <p><span class="w3-tag">Hi!</span> I am Idoia, a front-end and back-end developer with over 15 years of experience in web design and development. I have focussed in HTML, CSS, and JavaScript and I have worked on large e-commerce platforms and startups. I'm a passionate coder and and have excellent communication skills. I enjoy writing python app prototypes in notebooks and then implementing them in Streamlit/Hugging Face.</p>
 
                 <p>On this page, you'll find some of my past projects that showcase my skills as a web developer. I have an eye for detail and believe in pixel-perfect design. I'm always up for a challenge and love solving problems with creative solutions. Communication is key in web development, and I pride myself on being an excellent communicator.</p>
