--- a/dev/web.html
+++ b/dev/web.html
@@ -120,7 +120,7 @@
                                     <a href="https://medium.com/@artGen101/easy-ai-classifier-is-it-a-portrait-or-a-street-photo-821f55d2c3af" target="_blank">Easy AI Image Classifier: Is it a portrait? Google Colab/Jupyter notebook</a></li>
                             </ul>
                         </li>
-                        <li><a href="https://discord.gg/jhrBtDDX" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
+                        <li><a href="https://discord.com/channels/1091821932447539361/1203371296218415205" target="_blank">Discord channel</a> to showcase Stable Diffusion and AI image and video creations.</li>
                     </ul>
                 </p>
             </div>
